# kor

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  README.md  api.html  apis.html  document_extraction.html  genindex.html  guidelines.html  index.html  nested_objects.html  objects.html  objects.inv  phone_numbers-Copy1.html  prompt.html  prompt_examples.html  py-modindex.html  pyproject.toml  schema_serialization.html  search.html  searchindex.js  tutorial.html  type_descriptors.html  untyped_objects.html  validation.html
.doctrees/: api.doctree  apis.doctree  document_extraction.doctree  environment.pickle  guidelines.doctree  index.doctree  nested_objects.doctree  objects.doctree  phone_numbers-Copy1.doctree  prompt.doctree  prompt_examples.doctree  schema_serialization.doctree  tutorial.doctree  type_descriptors.doctree  untyped_objects.doctree  validation.doctree
.github/workflows/: _pydantic_compatibility.yml  doc_publish.yaml  doc_test.yaml  documentation.yaml  release.yml  test.yml
_modules/: index.html
_modules/kor/: adapters.html  examples.html  exceptions.html  nodes.html  prompts.html  type_descriptors.html  validators.html
_modules/kor/documents/: html.html  typedefs.html
_modules/kor/encoders/: csv_data.html  encode.html  json_data.html  typedefs.html  utils.html  xml.html
_modules/kor/extraction/: api.html  parser.html  typedefs.html
_sources/: api.rst.txt  apis.ipynb.txt  document_extraction.ipynb.txt  guidelines.ipynb.txt  index.rst.txt  nested_objects.ipynb.txt  objects.ipynb.txt  untyped_objects.ipynb.txt  validation.ipynb.txt
_static/: documentation_options.js
docs/extraction/: kor_01.ipynb
docs/source/: api.rst  apis.ipynb  conf.py  document_extraction.ipynb  guidelines.ipynb  index.md  index.rst  music.ipynb  nested_objects.ipynb  objects.ipynb  phone_numbers-Copy1.ipynb  prompt.ipynb  prompt_examples.ipynb  schema_from_json.ipynb  schema_serialization.ipynb  tutorial.ipynb  type_descriptors.ipynb  untyped_objects.ipynb  validation.ipynb
docs/source/extraction/: kor_01.ipynb
kor/: __init__.py  _pydantic.py  adapters.py  blocks.py  core.py  elements.py  encoding.py  example_generation.py  examples.py  exceptions.py  extraction.py  inputs.py  interpreter.py  llm_utils.py  llms.py  nodes.py  parsing.py  prompts.py  run.py  serializer.py  test_validators.py  type_descriptors.py  validators.py  version.py  visitors.py  xml_encoder.py
kor/documents/: html.py  typedefs.py
kor/encoders/: __init__.py  csv_data.py  encode.py  exceptions.py  json_data.py  parser.py  typedefs.py  utils.py  xml.py
kor/experimental/: blocks.py  interpreter.py  other_prompts.py  run.py  s_exprs.py  tokenizer.py
kor/extraction/: __init__.py  api.py  extraction.py  parser.py  typedefs.py
kor/llms/: __init__.py  openai.py  typedefs.py
kor/parsers/: csv_data.py  typedefs.py  xml.py
kor/processing/: html.py
tests/: conftest.py  test_adapters.py  test_adpaters.py  test_chain.py  test_deserialization.py  test_elements.py  test_encoders.py  test_examples.py  test_extraction.py  test_inputs.py  test_interpreter.py  test_llms.py  test_nodes.py  test_parsing.py  test_prompt_generation.py  test_public_interface.py  test_serialization.py  test_type_descriptors.py  test_validators.py  test_visitors.py  utils.py
tests/documents/: test_html.py
tests/experimental/: test_parser.py
tests/extraction/: test_extraction_from_documents.py  test_extraction_with_chain.py
tests/integration/: extraction_with_chain.py
tests/test_encoders/: test_csv.py  test_csv_data.py  test_encoders.py  test_json.py  test_utils.py  test_xml.py
tests/test_parsers/: test_csv.py  test_xml.py
