[tool.poetry]
name = "kor"
version = "0.2.0"
description = "Extract information with LLMs from text"
authors = ["Eugene Yurtsev <eyurtsev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/eyurtsev/kor"


[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27"
pydantic = "^1.9.6"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
black = { version="^23.1.0", extras=["jupyter"] }
pylint = "^2.16.2"
isort = "^5.12.0"
poethepoet = "^0.18.1"
autoflake = "^2.0.2"

[tool.poetry.group.docs.dependencies]
nbsphinx = "^0.8.9"
sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
sphinx_book_theme = "^0.3.3"
sphinx_rtd_theme = "^1.0.0"
sphinx-typlog-theme = "^0.8.0"
sphinx-panels = "^0.6.0"
myst-nb = "^0.17.1"
linkchecker = "^10.2.1"
toml = "^0.10.2"
sphinx-copybutton = "^0.5.1"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"

[tool.isort]
profile = "black"

[tool.poe.tasks]
black = "black ."
isort = "isort ."
pylint = "pylint kor"
pytest.cmd = "py.test --durations=5 -W error::RuntimeWarning"
mypy = "mypy . --pretty --show-error-codes"
autoflake = "python -m autoflake --remove-all-unused-imports --remove-duplicate-keys --quiet --in-place --recursive ."
autoformat = { shell = "poe black && poe isort && poe pylint" }
test = { shell = "poe black --check --diff && poe isort --check-only && poe pylint && poe pytest" }


[tool.pylint.messages]
disable = [
  "no-else-return", # I'm not a fan
  "missing-module-docstring", # Need to re-enable
  "missing-class-docstring", # Need to re-enable
]

[tool.pylint.basic]
good-names = [
  "id",  # Shadows built-in but using for data models
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
