[tool.poetry]
name = "kor"
version = "1.0.2"
description = "Extract information with LLMs from text"
authors = ["Eugene Yurtsev <eyurtsev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/eyurtsev/kor"

[tool.poetry.dependencies]
python = "^3.8.1"
pandas = "<3,>=1.5.3"
markdownify = {version = "^0.11.6", optional = false}
pydantic = "<3"
langchain-core = ">=0.1,<0.3"
langchain = ">=0.1,<0.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
black = { version="^23.1.0", extras=["jupyter"] }
poethepoet = "^0.18.1"
ruff = "^0.1.4"
pytest-cov = "^4.0.0"
langchain-openai = "^0.0.5"

[tool.poetry.group.docs.dependencies]
nbsphinx = "^0.8.9"
sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
sphinx_book_theme = "^0.3.3"
sphinx_rtd_theme = "^1.0.0"
sphinx-typlog-theme = "^0.8.0"
sphinx-panels = "^0.6.0"
myst-nb = "^0.17.1"
linkchecker = "^10.2.1"
toml = "^0.10.2"
sphinx-copybutton = "^0.5.1"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"

[tool.poetry.group.types.dependencies]
types-toml = "^0.10.8.5"


[tool.poetry.extras]
html = ["markdownify"]

[tool.poe.tasks]
black = "black"
ruff = "ruff"
pytest.cmd = "py.test --capture=no --durations=5 -W error::RuntimeWarning --cov --cov-config=.coveragerc --cov-report xml --cov-report term-missing:skip-covered"
mypy = "mypy . --pretty --show-error-codes"
fix = { shell = "poe black . && poe ruff --fix ." }
fix_docs = "black docs"
# Using a --preview feature. Commit your code prior to use this fix.
fix_strings = "black kor --preview"
test = { shell = "poe black . --check --diff && poe ruff . && poe pytest && poe mypy" }
# Use to auto-generate docs
apidoc = "sphinx-apidoc -o docs/source/generated kor"
pyintegration = { shell = "py.test --capture=no ./tests/integration/*.py" }
integration = { shell = "poe black . --check --diff && poe ruff . && poe pyintegration && poe mypy" }

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]

# Same as Black.
line-length = 88

[tool.mypy]
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[tool.coverage.run]
omit = [
    "tests/*",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
